k8s/logisticafront-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logistica-front
spec:
  replicas: 1
  selector:
    matchLabels:
      component: logisticafront
  template:
    metadata:
      labels:
        component: logisticafront
    spec:
      containers:
        - name: logisticafront
          image: tcero76/frontend
          ports:
            - containerPort: 80
