k8s/logisticaback-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logistica-back
spec:
  replicas: 1
  selector:
    matchLabels:
      component: logisticaback
  template:
    metadata:
      labels:
        component: logisticaback
    spec:
      containers:
        - name: logisticaback
          image: tcero76/backend
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    component: logisticaback
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: logisticaback-nodeport-service
  labels:
    name: mysql
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30080
      name: http
  selector:
    component: logisticaback
