k8s/logisticafront-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logisticafront-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: logisticafront
  ports:
    - port: 80
      targetPort: 80
