k8s/logisticafront-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: logisticafront-nodeport-service
  labels:
    name: logisticafront
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30030
      name: http
  selector:
    component: logisticafront
